WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159773
Possible crash under NavigationState::NavigationClient::processDidCrash()
https://bugs.webkit.org/show_bug.cgi?id=159773
Summary
Possible crash under NavigationState::NavigationClient::processDidCrash()
Chris Dumez
Reported
2016-07-14 10:52:42 PDT
Possible crash under NavigationState::NavigationClient::processDidCrash(): Exception Type: EXC_CRASH (SIGABRT) Exception Codes: 0x0000000000000000, 0x0000000000000000 Exception Note: EXC_CORPSE_NOTIFY Triggered by Thread: 0 Filtered syslog: None found Last Exception Backtrace: 0 CoreFoundation 0x18ca6feb0 __exceptionPreprocess + 124 (NSException.m:165) 1 libobjc.A.dylib 0x18c0684a8 objc_exception_throw + 56 (objc-exception.mm:521) 2 CoreFoundation 0x18ca76e98 -[NSObject(NSObject) doesNotRecognizeSelector:] + 140 (NSObject.m:328) 3 CoreFoundation 0x18ca73e98 ___forwarding___ + 916 (NSForwarding.m:3120) 4 CoreFoundation 0x18c971afc _CF_forwarding_prep_0 + 92 5 WebKit 0x195e37978 WebKit::NavigationState::NavigationClient::processDidCrash(WebKit::WebPageProxy&) + 88 (NavigationState.mm:688) 6 WebKit 0x195f5ee10 WebKit::WebPageProxy::processDidCrash() + 88 (WebPageProxy.cpp:5041) 7 WebKit 0x195fb312c WebKit::WebProcessProxy::didClose(IPC::Connection&) + 244 (WebProcessProxy.cpp:531) 8 JavaScriptCore 0x1911ac370 WTF::RunLoop::performWork() + 172 (NoncopyableFunction.h:50) 9 JavaScriptCore 0x1911ac59c WTF::RunLoop::performWork(void*) + 36 (RunLoopCF.cpp:38) 10 CoreFoundation 0x18ca1ff94 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 24 (CFRunLoop.c:1943) 11 CoreFoundation 0x18ca1f86c __CFRunLoopDoSources0 + 412 (CFRunLoop.c:2008) 12 CoreFoundation 0x18ca1d4dc __CFRunLoopRun + 804 (CFRunLoop.c:2821) 13 CoreFoundation 0x18c94d764 CFRunLoopRunSpecific + 292 (CFRunLoop.c:3103) 14 GraphicsServices 0x18e350198 GSEventRunModal + 180 (GSEvent.c:2245) 15 UIKit 0x1928c68d0 -[UIApplication _run] + 664 (UIApplication.m:2643) 16 UIKit 0x1928c163c UIApplicationMain + 208 (UIApplication.m:4080) 17 MobileSafari 0x1000f4de0 main + 1996 (main.m:168) 18 libdyld.dylib 0x000000018c4f05b8 0x000000018c4ec000 + 17848
Attachments
Patch
(2.15 KB, patch)
2016-07-14 10:56 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-07-14 10:53:10 PDT
<
rdar://problem/19814215
>
Chris Dumez
Comment 2
2016-07-14 10:56:05 PDT
Created
attachment 283661
[details]
Patch
Chris Dumez
Comment 3
2016-07-14 11:34:10 PDT
Comment on
attachment 283661
[details]
Patch Clearing flags on attachment: 283661 Committed
r203230
: <
http://trac.webkit.org/changeset/203230
>
Chris Dumez
Comment 4
2016-07-14 11:34:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug