Possible crash under NavigationState::NavigationClient::processDidCrash() https://bugs.webkit.org/show_bug.cgi?id=159773 <rdar://problem/19814215>

Reviewed by Anders Carlsson.

Add a m_navigationState.m_navigationDelegateMethods.webViewWebProcessDidCrash before
trying to call it to avoid crashing if the client does not implement it.

At the beginning of the method, we abort early only if both webViewWebContentProcessDidTerminate
and webViewWebProcessDidCrash are implemented. However, if webViewWebContentProcessDidTerminate
implemented but not webViewWebProcessDidCrash we can end up crashing as we fail to check later
on before trying to call it.

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::NavigationClient::processDidCrash):

Canonical link: https://commits.webkit.org/177920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203230 268f45cc-cd09-0410-ab3c-d52691b4dbfc